# odoorpc-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml
src/core/: exceptions.py  jsonrpc.py  logger.py  logging_config.py  middleware.py  params.py  responses.py  routes.py  schemas.py  services.py  settings.py  utils.py
src/odoorpc_api/: .env.default  context.py  exceptions.py  jsonrpc.py  logger.py  logging_config.py  middleware.py  responses.py  routes.py  services.py  settings.py  types.py
